--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-handlebars": "^7.1.3",
     "express-rate-limit": "^7.5.0",
     "js-tiktoken": "^1.0.20",
+    "jsonrepair": "^3.13.1",
     "mongoose": "^8.13.2",
     "multer": "^2.0.2",
     "nodemailer": "^6.10.1",
