change envs prepare selfhosted change arquitecture, no apim

--- a/env.example
+++ b/env.example
@@ -10,6 +10,9 @@ MONGODBKEY=your_mongodb_key
 MONGODBNAME=your_mongodb_name
 
 # Email
+EMAIL_HOST=smtp.your-email-provider.com
+EMAIL_PORT=587
+EMAIL_USER=your-email@your-domain.com
 EMAIL_PASSWORD=your_email_password
 
 # Azure Storage
@@ -21,9 +24,18 @@ SERVICE_BUS_NAME=your_service_bus_namespace
 SERVICE_BUS_KEY=your_service_bus_key
 QUEUE_UTILIZATION_THRESHOLD=80
 
+# Azure Web PubSub
+# Opción 1: Connection string completo (para backward compatibility)
+# AZURE_WEB_PUBSUB_CONNECTION_STRING=Endpoint=https://your-resource.webpubsub.azure.com;AccessKey=your-access-key;Version=1.0;
+# Opción 2: Componentes separados (recomendado para Key Vault)
+AZURE_WEB_PUBSUB_ENDPOINT=https://your-resource.webpubsub.azure.com
+AZURE_WEB_PUBSUB_ACCESS_KEY=your-access-key
+AZURE_WEB_PUBSUB_VERSION=1.0
+
 # API y Seguridad
-API_MANAGEMENT_KEY=your_api_management_key
-API_MANAGEMENT_BASE=your_api_management_url
+# IS_SELF_HOSTED: Indica si es un deployment self-hosted (sin APIM)
+# Valores: 'true', '1' para self-hosted, cualquier otro valor o vacío para SaaS multi-tenant
+IS_SELF_HOSTED=false
 
 INSIGHTS_KEY=your_insights_key
 SERVER_KEY=your_server_key
@@ -37,3 +49,36 @@ AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
 AZURE_OPENAI_KEY=your-azure-openai-key
 AZURE_AI_ASSISTANT_ID=asst_your-assistant-id
 AZURE_VECTOR_STORE_ID=vs_your-vector-store-id
+
+# Azure Document Intelligence
+AZURE_DOCUMENT_INTELLIGENCE_ENDPOINT=https://your-resource.cognitiveservices.azure.com/
+AZURE_DOCUMENT_INTELLIGENCE_KEY=your-document-intelligence-key
+
+# Perplexity API
+PERPLEXITY_API_KEY=your_perplexity_api_key
+
+# Azure OpenAI por región (para llamadas directas sin APIM)
+# Región AS1 (India)
+AZURE_OPENAI_AS1_BASE_URL=https://your-resource-as1.openai.azure.com
+AZURE_OPENAI_AS1_KEY=your-as1-api-key
+# Región AS2 (Japan)
+AZURE_OPENAI_AS2_BASE_URL=https://your-resource-as2.openai.azure.com
+AZURE_OPENAI_AS2_KEY=your-as2-api-key
+# Región EU1 (Sweden)
+AZURE_OPENAI_EU1_BASE_URL=https://your-resource-eu1.openai.azure.com
+AZURE_OPENAI_EU1_KEY=your-eu1-api-key
+# Región US1 (West US)
+AZURE_OPENAI_US1_BASE_URL=https://your-resource-us1.openai.azure.com
+AZURE_OPENAI_US1_KEY=your-us1-api-key
+# Región US2 (East US)
+AZURE_OPENAI_US2_BASE_URL=https://your-resource-us2.openai.azure.com
+AZURE_OPENAI_US2_KEY=your-us2-api-key
+
+# Self-Hosted Configuration (para deployments sin APIM)
+# Solo necesario si IS_SELF_HOSTED=true
+# Región PRIMARY (principal)
+AZURE_OPENAI_SELFHOSTED_PRIMARY_BASE_URL=https://your-primary-region.openai.azure.com
+AZURE_OPENAI_SELFHOSTED_PRIMARY_KEY=your-primary-api-key
+# Región FALLBACK (respaldo, opcional)
+AZURE_OPENAI_SELFHOSTED_FALLBACK_BASE_URL=https://your-fallback-region.openai.azure.com
+AZURE_OPENAI_SELFHOSTED_FALLBACK_KEY=your-fallback-api-key
